src/objects/SBQQ__UpgradeSource__c.object
<CustomObject>
    <description>Association between upgrade product and product being upgraded.</description>
    <fields>
        <fullName>SBQQ__SourceProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being upgraded.</description>
        <inlineHelpText>Specify product to upgrade from.</inlineHelpText>
        <label>Source Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Available Upgrade Sources</relationshipLabel>
        <relationshipName>AvailableUpgradeSources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeConversionRate__c</fullName>
        <description>The conversion rate between the upgrade product and the source product.</description>
        <inlineHelpText>Specify a ratio for quantity conversion from Upgrade Source to Upgrade Product. e.g. &quot;5:1&quot; indicates that 5 units of Upgrade Source convert to 1 unit of Upgrade Product. If blank, no Upgrade Conversion Rate is enforced.</inlineHelpText>
        <label>Upgrade Conversion Rate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upgrade product.</description>
        <inlineHelpText>Specify the product to upgrade to.</inlineHelpText>
        <label>Upgrade Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Upgrade Sources</relationshipLabel>
        <relationshipName>UpgradeSources</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Upgrade Source</label>
    <nameField>
        <label>Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upgrade Sources</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SBQQ__Conversion_Rate_Must_Fit_Ratio_Format</fullName>
        <active>true</active>
        <description>Guarantee that the Upgrade Conversion Rate is in the form of a ratio.</description>
        <errorConditionFormula>NOT(REGEX(BLANKVALUE(SBQQ__UpgradeConversionRate__c, &quot;1:1&quot;), &quot;[1-9][\\d]*:[1-9][\\d]*&quot;))</errorConditionFormula>
        <errorMessage>Conversion Rate must be represented as a ratio of the format &quot;Upgrade Source:Upgrade Product&quot;.</errorMessage>
    </validationRules>
</CustomObject>